--- a/PORTFOLIO.html
+++ b/PORTFOLIO.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="PORTFOLIO.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-
+    <script src="https://kit.fontawesome.com/b38f2df615.js" crossorigin="anonymous"></script>
     <title>DOG 🐕</title>
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/366356138_197129190026856_7869704875740052518_n.png?_nc_cat=106&ccb=1-7&_nc_sid=aee45a&_nc_ohc=5cZnpIUyvpcAX_wAOBP&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRxfZSd80KF2sYVR2J80G2g-HI_BBvytsp314ceLJ3RLw&oe=6503CE1C" class="logo" alt=""></a>
+        <a href="#"><img src="https://lh3.googleusercontent.com/pw/ADCreHc2EfMeeJw3ab7TXTHZ0svL_8MLCJon46sxRB6ZC2KBHtmQK2pREQy2XSiH7PX_OiJ4EHmiYn8fSMQc3e4_NHO-f4ULX6eAs-srDbh-8hZSrwV0ct49r1hCeTi-bYDri8pokUfhpdi6e3Ei-u6lEeHZvboi63bxIIpEu0YFYeZaVUKZ0cRAgolSwFkvei56ta3I3F57tvnTBdgT9CUH6COK3TZuKcGsragGcbPkqNDm_HN2LOolj92wrY0iDnlWmkuIxzlhUGX0J6kpkuDS601kKkbSK0xRa3gzRU3DmB6CFGo7NHSUGtHl-b1p1BMXjbBVSHxhCr0EpRapUulF4Rcs4TL4Qwbk3PqTJHwh1cl3wQMTzqnemcWWd4YMJbex85P3OwkXjCNmtI4pBI2kQoap41sbzSastsXHJ7lD37ZtSzRYHLP8mda2equ4F_g1K3u96wnVE_0jiSXjkWQLGFyP0--vE43FIOiboeYFH-r3t19od8SOM5w9RN-NXD66eTw59mF3UCp7IfzMuMQNXDSSPZ80KPqNxAWdFuBpNY3z3Jdrq_RX6Yxrd9i9bm9l3VV5QSwC7y3pTrJEjEIcvqUKkEcZuAJ7a746tKuRjEgAcKqM7dVMav8ZNwjxfYSQB1vH37Vrjojmugz9YKKiqgWE93eJ9cTN-ABtg6LvDOD_I6Fd_arBmxqbF_BqmMwMmf5XDoJnDwY7hCg_lGOKD0IrvXXf3kZuvTz3U0HoaGh5wSjxd93evj2KRfXbqjNmZsowLa7GDqNmTA77k5PWRqjsluccm6jPL4zAcAXIi7gGNrCBQQkShfiwim0Et6Y-rU0-a1dHfIvwDyrAMuaTZQ4lGP3yrJOymwyhrrtvkyPVICt2VZvRfcFgyADtdTs8mJ1iFxMCbdO24wRYe3SARH1KcTah514z6u3MQb5Cb-giSXeimJftpKZxBNYZXZ_I3yK5oHY51YQgAqNhlHyrCAk2gJqoEVC4DgKlUIkocTO2uO7UUYLcbGBnQYeIwcjc5YLe4xRgrPE2Zx3kUFNw465nY2Givr8kllmy0omk=w641-h143-s-no?authuser=0" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="PORTFOLIO.html">Home</a></li>
                 <li><a href="SHOP.html">Shop</a></li>
                 <li><a href="ABOUT.html">About</a></li>  
                 <li><a href="CONTACT.html">Contact</a></li>
-                <li><a href="account.html"><i class="fa-solid fa-user"></i></a></li>
+                <li><a href="ACCOUNT.html"><i class="fa-light fa-user"></i></a></li>
             </ul>
         </div>
     </section>
     <!--This file is used to introduce types of pet and some popular pet many family like it-->
     <section id="Introduction">
-        <h1>WELCOME TO THE WORLD OF PET</h1>
-        <img id ="PET-INTRO" src="https://images.saymedia-content.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:eco%2Cw_1200/MTk2MzA1MDEwMTg5OTM1OTIw/strong-and-feminine-shiba-inu-names.jpg">
+        <h1>WELCOME TO OUR DOG WORLD</h1>
+        <img id ="PET-INTRO" src="https://lh3.googleusercontent.com/pw/ADCreHcAPKxW_ehbvsHDKB2fRmYq4hGgQrO0laAEY-fyb7OJeoWumnc6u48IYE-OgAqxB-SkvCXu-Np3rz8bE1QYRyg1wZUQPQjgXU8teiV4R8QqTZg2Nmlhq6Q4w5KUcJZ96u8NCIWnVxY_G1NaWWMlmlB1-17B6KNeZq8tX2zWAUnPD2zWYHm46lIaA9k5QljUHvZpIvy70Nd1lFMl_YnyvRHc_Qh93VlVPZfUxQ_YDSriQo4t5-qcTiKbqk4IzVs02Gp5TvVI3ZwraDfWRZn3XGPo9boGc7fj1xFOJ0XQRwfOtJ_NaTcnXXonbrRjGTS1agEuR8jAA_LafBm8dhN6oJNfpvHqDpI2O48sGAfmUKaQOTTFbLCJNfq4BVvUfbRpKLmpE8rNLwI8qquA1xkJobEfkyfWaIIBb-E73-CKl6qwG8g-WXzVjDBTLrPINXB4D2Xi3knTiTxP_20U15r4abtXgsFpYqjOrE_ZKr2blcN8IcBYBwOZHKbHdjUKQSBkeb_A_NqrPMwGiPnK2TFgl3Kpuu1jxIueTn0XeHMrXR2yUb1HgnDOg1vIxdSHm6XdtrDH1tzdJM3xNsu-8zYX5hmmolspF4ILFTokATJWfPYw6uBWwvtT-x_dWoPxd79KHLcuS_0pXybgWwXuDeEP3G1KGLDqysyYIBTNS1T4XQJs_BF7FOXxD3CjUDAVnogXrhwwyvSoC1SRgVRSAYefen808GyP8QK50Y-QiJqBgXyKqjhCrA5NbtqPl4k3w8tJJMF5n0PsvzoMBpbtFLrWxlTqFEH3L1aIiCcsuUwPCkiiEA3byxOXHi6_5PY6TKN57eVZhnN9SemjIXwN3XnEXEx2bENa1NfuLIQk3kKjEKX7FUrbZ6-wvAePEAg2vU3-vqyBiigpVlVWpANFltdGto-g3F8XF3UG_AonYl56XgMlJtgaSuRwrSsSgX5Wt2hYe5HsyZsN4ggXyywZn5E6bEN6JO1pwuXdC_209TCKbMgBP12q4fN0Yc0yNSXbwrF8d8FGFrJmFasIjjOMAjnytkAiRswZ0g04PDoz-1MZ=w589-h894-s-no?authuser=0">
     </section>
     <section id="Shiba-dog-talking">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyvPepAditpD-se2eAMch0xZLYTjguxHY3wt1BIxl0_3XOyEFGCgLOm_y9s2XKGrMCLGA&usqp=CAU">
         <p>Hi, my name is Flash. I am the cute Shiba dog. Hope you like me 💘</p>
         <p>What can I help you?</p>
     </section>
@@ -45,14 +43,14 @@
             <!--Create an arrow directing to right and when hovering, arrow changes the direction to button -->
         </h2>
         <ui id="list-kind-pet">
-            <li>Cat</li>
+            <!--<li>Cat</li>-->
             <li>Dog</li>
         </ui>
         <!--Introduction to Cat-->
-    <section id="cat-INTRO">
+    <!--<section id="cat-INTRO">
         <h2>Cat</h2>
         <p>a small domesticated carnivorous mammal with soft fur, a short snout, and retractable claws. It is widely kept as a pet or for catching mice, and many breeds have been developed</p>
-    </section>
+    </section>-->
     <section id="dog-INTRO">
         <h2>Dog</h2>
         <p>a domesticated carnivorous mammal that typically has a long snout, an acute sense of smell, nonretractable claws, and a barking, howling, or whining voice</p>
@@ -63,11 +61,13 @@
             <h2>Dog Food</h2>
             
         </section>
-        <section id="cat-FOOD">
+        <!--<section id="cat-FOOD">
             <h2>Cat Food</h2>
 
-        </section>
+        </section>-->
     </div>
-    <script src="PORTFOLIO.js"></script>
+    <div id="Web-Footer">
+
+    </div>
 </body>
 </html>
